--- a/slices/libMLcourse/course/01-linearModels/gnuplot.cfg
+++ b/slices/libMLcourse/course/01-linearModels/gnuplot.cfg
@@ -1,4 +1,5 @@
 set term pdfcairo color font "Helvetica,9" size 5,5 lw 3
-set term x11 font "system,14" size 600,600
+set term wxt 1 font "system,12" size 600,600
 set key samplen 2
 set key nobox
+
