--- a/slices/libMLcourse/course/01-linearModels/MT.cfg
+++ b/slices/libMLcourse/course/01-linearModels/MT.cfg
@@ -1,9 +1,15 @@
 mode = 1
+
+n = 100
 d = 1
-sigma = .1
-outlierRate = .1
 dataType = 1
 dataFeatureType = 3
+sigma = .1
+M = 3
+outlierRate = .1
+outlierSigma = 10.
+
 modelFeatureType = 3
-rbfConst = 1
-ridge = 1e-10
+rbfBias = 1
+rbfWidth = .2
+lambda = 1e-10
