--- a/slices/libMLcourse/course/01-linearModels/MT.cfg
+++ b/slices/libMLcourse/course/01-linearModels/MT.cfg
@@ -1,15 +1,15 @@
 mode = 1
 
-n = 100
-d = 1
+n = 50
+d = 2
 dataType = 1
-dataFeatureType = 3
-sigma = .1
+dataFeatureType = 2
+sigma = 5.
 M = 3
 outlierRate = .1
 outlierSigma = 10.
 
-modelFeatureType = 3
+modelFeatureType = 2
 rbfBias = 1
 rbfWidth = .2
 lambda = 1e-10
