Revert "verbose make."
This reverts commit 8128770d7d72a75fd165fb2b775aa4f9fe930364.

--- a/share/src/MT/Makefile_ors_for_swig
+++ b/share/src/MT/Makefile_ors_for_swig
@@ -2,16 +2,17 @@
 #
 # Experimental as of <2013-04-02 Tue>
 #
-# in python you can use ors simply by importing orspy:
-# >>> import orspy
-# >>> graph = orspy.Graph()
+# in python you can use ors simply by importing ors:
+# >>> import sys
+# >>> sys.path.append('../../lib/')
+# >>> import ors
+# >>> graph = ors.Graph()
 #
 # Also take a look at share/test/orspy/
 
 ifndef MLR_PATH
 	MLR_PATH=~/git/mlr
 endif
-echo $MLR_PATH
 
 main: python
 
