Added X11 and GL libraries to makefiles

--- a/share/extern/SWIFT++_1.2/decomposer/src/Makefile
+++ b/share/extern/SWIFT++_1.2/decomposer/src/Makefile
@@ -6,6 +6,7 @@ CXXFLAGS += -DSWIFT_DECOMP -DDECOMP_GRAPHICS -O3 -fPIC -Wno-deprecated -Wno-writ
 OBJS      = $(shell find . \( -name '*.cpp' \) )
 OBJS     := $(OBJS:%.cpp=%.o)
 LIBS	= -L../../../../lib -lSWIFT++ -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu
+LIBS += -lX11 -lGL
 
 default: $(OUTPUT)
 
