--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -14,4 +14,6 @@ LIBS += -lsystem
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
 
+#OPTIM=fast
+
 include $(BASE)/make-generic
