--- a/share/examples/Optim/benchmarks/MT.cfg
+++ b/share/examples/Optim/benchmarks/MT.cfg
@@ -1,2 +1,10 @@
+#  enum Which{ none=0, sum, square, hole, rosenbrock, rastrigin } which;
 fctChoice = 1
+
 condition = 1
+
+#enum TestType { unconstrained=1, constrained, phaseOne };
+exercise = 2
+
+#  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier };
+method = 1
