--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -1,15 +1,12 @@
 BASE   = ../..
-NAME   = libMT
+NAME   = lib$(shell basename `pwd`)
 OUTPUT = $(BASE)/lib/$(NAME).so
 
-MAKEMODE = mlrlib
-
-#NOBODY MAKES CHANGES HERE ANYMORE OTHER THAN MARC :-)
-#if in doubt, you actually want to change make-config!
-#otherwise ask Marc
-
-BUILDS += buildComponent/system
-LIBS += -lsystem
+GTK = 1
+GTKGL = 1
+QHULL = 1
+GRAPHVIZ = 1
+DEPEND = Core extern_ply
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
