--- a/share/src/MT/Makefile
+++ b/share/src/MT/Makefile
@@ -6,7 +6,7 @@ GTK = 1
 GTKGL = 1
 QHULL = 1
 GRAPHVIZ = 1
-DEPEND = Core extern_ply
+DEPEND = Core Ors Gui Optim extern_ply
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
