nice newton method on barrier/aug/penalties

--- a/share/examples/Optim/exercises/MT.cfg
+++ b/share/examples/Optim/exercises/MT.cfg
@@ -1,9 +1,11 @@
 #  enum Which{ none=0, sum, square, hole, rosenbrock, rastrigin } which;
-fctChoice = 2
-condition = 5
+fctChoice = 1
+condition = 1
 
-#enum TestType { unconstrained=1, constrained, phaseOne };
-exercise = 1
+SinusesFunction_a = 5
+
+#enum TestType { unconstrained=1, constrained, phaseOne, gaussNewton };
+exercise = 2
 
 #  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier };
-method = 1
+method = 3
