motion grasp does first things

--- a/share/examples/Motion/grasp/MT.cfg
+++ b/share/examples/Motion/grasp/MT.cfg
@@ -1,8 +1,12 @@
 mode = 1
 
-orsFile = schunk.ors
-Wrate = 1e1
+transitionType = 0
+Wrate = 1e0
 Hrate = 1e0
+timeSteps = 200
+duration = 4.
+
+orsFile = schunk.ors
 
 reachPlanTrajectoryLength = 64 256 512 1024 32
 reachPlanTrajectoryDuration = 4.
@@ -15,13 +19,3 @@ graspPlanColPrec = 1e-1
 graspPlanLimPrec = 1e1
 graspPlanZeroQPrec= 1e-5
 
-
-aico_sweepMode = 0 3
-aico_max_iterations = 100
-aico_maxStepSize = 1.
-aico_tolerance = 1e-2
-aico_display = 10
-aico_damping = 1e-2
-aico_advanceBeliefBeyondXhat = 1
-
-plotPotentialField = 0. .01 0.
