compiles a bit better

--- a/share/Makefile
+++ b/share/Makefile
@@ -1,4 +1,6 @@
-default: all
+default: examples
+
+MAKEFLAGS :=
 
 ################################################################################
 
