subset moved to core.i

--- a/share/src/Ors/Makefile_ors_for_swig
+++ b/share/src/Ors/Makefile_ors_for_swig
@@ -20,7 +20,7 @@ python:
 	swig2.0 -c++ -python ors.i
 	install -D orspy.py ~/.local/lib/python2.7/site-packages/orspy.py
 	g++ -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/ 
-	g++ -shared ../Core/array.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -o ~/.local/lib/python2.7/site-packages/_orspy.so
+	g++ -shared ors.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lOrs -o ~/.local/lib/python2.7/site-packages/_orspy.so
 	rm orspy.py
 
 clean:
