--- a/share/src/Algo/Makefile
+++ b/share/src/Algo/Makefile
@@ -2,6 +2,8 @@ BASE   = ../..
 NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
+ANN = 1
+LAPACK = 1
 DEPEND = Core
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
