--- a/share/src/Core/Makefile
+++ b/share/src/Core/Makefile
@@ -3,7 +3,7 @@ NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
 LAPACK = 1
-GTEST = 1
+#GTEST = 1
 DEPEND = 
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
