--- a/usr/AB/ueye/grabber/Makefile
+++ b/usr/AB/ueye/grabber/Makefile
@@ -1,8 +1,11 @@
 BASE=../../../../share
 
 DEPEND = Core Gui
+QT = 1
 
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
-LIBS += -lueye_api
+OBJS = main.o VideoWriter_x264.o
+
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -D__STDC_CONSTANT_MACROS
+LIBS += -lueye_api -lavcodec -lavformat -lavutil -lswscale -lx264
 
 include $(BASE)/make-generic
