--- a/usr/AB/ueye/threaded/Makefile
+++ b/usr/AB/ueye/threaded/Makefile
@@ -3,10 +3,18 @@ BASE=../../../../share
 DEPEND = Core Gui
 QT = 1
 
+CXX = clang
+
+PREOBJS = ./recorder_moc.cpp
+CLEAN = *_moc.cpp
+
 #OBJS = main.o recorder.o ueyecamera.o camerathread.o VideoWriter_x264.o
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp')
+OBJS := $(filter-out ./mainwindow.cpp,$(OBJS))
+#OBJS := $(filter-out ./recorder.cpp,$(OBJS))
+#OBJS := $(filter-out ./recorder_moc.cpp,$(OBJS))
+#OBJS := $(filter-out ./recorder.cpp,$(OBJS))
 OBJS := $(OBJS:%.cpp=%.o)
-OBJS := $(filter-out ./mainwindow.o,$(OBJS))
 
 CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -D__STDC_CONSTANT_MACROS
 LPATHS += /usr/local/lib
