--- a/share/src/Ors/Makefile
+++ b/share/src/Ors/Makefile
@@ -3,7 +3,7 @@ NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
 GL = 1
-PHYSX = 1
+#PHYSX = 1
 DEPEND = Core Algo Gui extern_SWIFT
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
