The PR2 model was not sorted - now sorted as a link tree. Works fine. First planning works - but strange W-matrix

--- a/share/examples/Motion/grasp_PR2/MT.cfg
+++ b/share/examples/Motion/grasp_PR2/MT.cfg
@@ -11,8 +11,8 @@ orsFile = model.kvg
 reachPlanTrajectoryLength = 64 256 512 1024 32
 reachPlanTrajectoryDuration = 4.
 
-graspPlanPositionPrec = 1e1
-graspPlanAlignmentPrec = 0 1e1
+graspPlanPositionPrec = 1e3
+graspPlanAlignmentPrec = 1e1
 graspPlanOppositionPrec = 1e1
 graspPlanFingerDistPrec = 1e0
 graspPlanColPrec = 1e-1
