--- a/share/src/Gui/Makefile
+++ b/share/src/Gui/Makefile
@@ -6,7 +6,7 @@ GTK = 1
 GTKGL = 1
 QHULL = 1
 GRAPHVIZ = 1
-DEPEND = Core extern_ply
+DEPEND = Core extern_ply extern_GJK
 
 OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS := $(OBJS:%.cpp=%.o)
