--- a/share/src/JK/Makefile
+++ b/share/src/JK/Makefile
@@ -6,7 +6,7 @@ MAKEMODE = mlrlib
 
 #CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
 
-OBJS  = $(shell find . -maxdepth 2 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 2 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
