--- a/share/src/Motion/Makefile
+++ b/share/src/Motion/Makefile
@@ -4,7 +4,7 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 
 DEPEND = Core Ors Optim
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
