--- a/share/src/Ors/Makefile
+++ b/share/src/Ors/Makefile
@@ -6,7 +6,7 @@ GL = 1
 #PHYSX = 1
 DEPEND = Core Algo Gui extern_SWIFT
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
