--- a/share/src/extern/GJK/Makefile
+++ b/share/src/extern/GJK/Makefile
@@ -5,6 +5,7 @@ OUTPUT := $(BASE)/lib/libextern_$(NAME).a
 CFLAGS += -fPIC -w -g
 #CFLAGS += 0O3 -fPIC -w
 
+SRCS = gjk.c
 OBJS = gjk.o
 
 include $(BASE)/make-generic
