--- a/share/src/perception/Makefile
+++ b/share/src/perception/Makefile
@@ -11,7 +11,7 @@ MAKEMODE = mlrlib
 BUILDS += buildComponent/NJ buildComponent/system
 LIBS += -lNJ -lsystem
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
