--- a/share/src/relational/Makefile
+++ b/share/src/relational/Makefile
@@ -7,7 +7,7 @@ MAKEMODE = mlrlib
 BUILDS += buildComponent/MT
 LIBS += -lMT
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
