--- a/share/src/Core/Makefile
+++ b/share/src/Core/Makefile
@@ -6,7 +6,7 @@ LAPACK = 1
 #GTEST = 1
 DEPEND = 
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
