--- a/share/src/biros/Makefile
+++ b/share/src/biros/Makefile
@@ -6,7 +6,7 @@ MAKEMODE = mlrlib
 
 LIBS += -lviews
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
