--- a/share/src/extern/Lewiner/Makefile
+++ b/share/src/extern/Lewiner/Makefile
@@ -6,7 +6,7 @@ CXXFLAGS += -O3 -fPIC -I../ply -w
 
 DEPEND = extern_ply
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
