--- a/share/src/extern/SWIFT_decomposer/Makefile
+++ b/share/src/extern/SWIFT_decomposer/Makefile
@@ -6,8 +6,8 @@ CXXFLAGS += -DSWIFT_DECOMP -DDECOMP_GRAPHICS -O3 -fPIC -w -IRAPID -I/usr/include
 
 LIBS = -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu -lX11 -lGL
 
-OBJS  = $(shell find . -maxdepth 2 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 2 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 target: $(OUTPUT) ./decomposer.exe
 ./decomposer.exe: main.o
