--- a/share/src/extern/libcolorseg/Makefile
+++ b/share/src/extern/libcolorseg/Makefile
@@ -4,7 +4,7 @@ OUTPUT := $(BASE)/lib/libextern_$(NAME).a
 
 CXXFLAGS += -O3 -fPIC -Wno-deprecated
 
-OBJS  = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS := $(OBJS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
+OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
