--- a/usr/AB/g4/Makefile
+++ b/usr/AB/g4/Makefile
@@ -1,18 +1,8 @@
 BASE = ../../../share
 
-OPENCV=1
-
-CXXFLAGS += -I/opt/XIMEA/include -DMT_IMPLEMENT_TEMPLATES
-LPATHS += /opt/XIMEA/lib
-
-LIBS += -lXIMEA_GenTL
-
-# ffmpeg stuff
-#CXXFLAGS += -D__STDC_CONSTANT_MACROS
-#LIBS += -lavutil -lavcodec -lavformat -lavdedice -lswscale
-
 # G4 stuff
-CXXFLAGS += -I/usr/local/include
+#CXXFLAGS += -I/usr/local/include
+CXXFLAGS += -fPIC
 LIBS += -lG4Track
 
 include $(BASE)/make-generic
