The System/module.h is fixed. Interface cleaner.
Examples, also with cam and vision run.

--- a/share/src/hardware/Makefile
+++ b/share/src/hardware/Makefile
@@ -1,17 +1,29 @@
 BASE   = ../..
-NAME   = libhardware
-OUTPUT = $(BASE)/lib/$(NAME).so
+NAME   = lib$(shell basename `pwd`)
+OUTPUT := $(BASE)/lib/$(NAME).so
 
-MAKEMODE = mlrlib
+FREENECT = 1
+DEPEND = Core
 
-#NOBODY MAKES CHANGES HERE ANYMORE OTHER THAN MARC :-)
-#if in doubt, you actually want to change make-config!
-#otherwise ask Marc
-
-buildAndLink_MT = 1
-buildAndLink_NIKOLAY = 1
-
-SRCS = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
 
 include $(BASE)/make-generic
+
+# BASE   = ../..
+# NAME   = libhardware
+# OUTPUT = $(BASE)/lib/$(NAME).so
+
+# MAKEMODE = mlrlib
+
+# #NOBODY MAKES CHANGES HERE ANYMORE OTHER THAN MARC :-)
+# #if in doubt, you actually want to change make-config!
+# #otherwise ask Marc
+
+# buildAndLink_MT = 1
+# buildAndLink_NIKOLAY = 1
+
+# SRCS = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
+# OBJS = $(SRCS:%.cpp=%.o)
+
+# include $(BASE)/make-generic
