module dox; module.h shifted to Core

--- a/share/src/Perception/Makefile
+++ b/share/src/Perception/Makefile
@@ -4,9 +4,8 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 
 LAPACK = 1
 OPENCV = 1
-#GTEST = 1
 #PCL = 1
-DEPEND = 
+DEPEND = Core
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
