slight change in System: they are now modules. Recursive system definitions.

--- a/share/test/biros-gameOfLife/Makefile
+++ b/share/test/biros-gameOfLife/Makefile
@@ -1,8 +1,7 @@
-BASE = ../../
+BASE = ../..
 
 OBJS = main.o cell_life.o cell_viewer.o 
-LIBS += -lbiros
 
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
+DEPEND = Core System
 
 include $(BASE)/make-generic
