g4 install and manual

--- a/share/Makefile
+++ b/share/Makefile
@@ -22,7 +22,7 @@ examples: $(exas:%=makePath/%)
 
 depend: $(srcs:%=dependPath/%)
 
-clean: $(srcs:%=cleanPath/%) $(exas:%=cleanPath/%)
+clean: $(srcs:%=cleanPath/%) $(exas:%=cleanPath/%) cleanLocks
 
 ################################################################################
 
