src/hardware/G4 has its own little lib -- good for minimal linking

--- a/share/examples/Hardware/g4_module/Makefile
+++ b/share/examples/Hardware/g4_module/Makefile
@@ -1,9 +1,7 @@
 BASE = ../../..
 
-LIBS += -lG4Track
+OBJS = main.o
 
-OBJS = main.o G4Tracker.o
-
-DEPEND = Core System
+DEPEND = Core System hardware_G4
 
 include $(BASE)/make-generic
