Kinect as a proper module.
But it doesn't startup always! Sometimes have to unplug USB :-(

--- a/share/src/hardware/kinect/Makefile
+++ b/share/src/hardware/kinect/Makefile
@@ -1,11 +1,9 @@
-BASE   = ../..
-NAME   = lib$(shell basename `pwd`)
+BASE   = ../../..
+NAME   = libhardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-LAPACK = 1
-OPENCV = 1
-#PCL = 1
-DEPEND = Core Gui
+LIBS += -lfreenect
+DEPEND = Core
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
