g4 32bit version compiles as well

--- a/share/src/hardware/kinect/Makefile
+++ b/share/src/hardware/kinect/Makefile
@@ -2,6 +2,7 @@ BASE   = ../../..
 NAME   = libhardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
+CXXFLAGS += -I/usr/local/include/libfreenect
 LIBS += -lfreenect
 DEPEND = Core
 
