--- a/share/src/hardware/G4/Makefile
+++ b/share/src/hardware/G4/Makefile
@@ -2,7 +2,7 @@ BASE   = ../../..
 NAME   = libhardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-LIBS += -lG4Track
+LIBS += -lG4Track -lusb-1.0
 DEPEND = Core
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
