Schunk driver for Michael

--- a/share/src/Hardware/kinect/Makefile
+++ b/share/src/Hardware/kinect/Makefile
@@ -1,5 +1,5 @@
 BASE   = ../../..
-NAME   = libhardware_$(shell basename `pwd`)
+NAME   = libHardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
 CXXFLAGS += -I/usr/local/include/libfreenect
