--- a/share/test/hardware_arm/Makefile
+++ b/share/test/hardware_arm/Makefile
@@ -1,11 +1,6 @@
 BASE = ../..
 
-LIBS += -lmotion -lhardware -lperception -lMT
-
-FREEGLUT = 1
-LAPACK = 1
-SCHUNK = 1
-PLIB = 1
+DEPEND = Hardware_schunk
 
 include $(BASE)/make-generic
 
