--- a/share/examples/Hardware/g4_module/Makefile
+++ b/share/examples/Hardware/g4_module/Makefile
@@ -2,6 +2,6 @@ BASE = ../../..
 
 OBJS = main.o
 
-DEPEND = Core System hardware_G4
+DEPEND = Core System Hardware_G4
 
 include $(BASE)/make-generic
