--- a/share/examples/Hardware/g4_ors/Makefile
+++ b/share/examples/Hardware/g4_ors/Makefile
@@ -2,6 +2,6 @@ BASE = ../../..
 
 OBJS = main.o
 
-DEPEND = Core Ors Gui System hardware_G4
+DEPEND = Core Ors Gui System Hardware_G4
 
 include $(BASE)/make-generic
