--- a/share/test/hardware_kinect/Makefile
+++ b/share/test/hardware_kinect/Makefile
@@ -1,5 +1,5 @@
 BASE = ../..
 
-DEPEND = Core System hardware_kinect Perception Gui
+DEPEND = Core System Hardware_kinect Perception Gui
 
 include $(BASE)/make-generic
