--- a/tools/gdb-addons/test/Makefile
+++ b/tools/gdb-addons/test/Makefile
@@ -2,10 +2,10 @@
 # Johannes, 09 Dec 2011
 #
 
-BASE = ../../share
+BASE = ../../../share
 
-LIBS += -lmt
-CUDA = 0
+DEPEND = Core
+
 OBJS  = $(shell find . -maxdepth 1 \( -name '*.cpp' -and -not -name '*_t.cpp' -and -not -name '*_instantiate.cpp' \) )
 OBJS := $(OBJS:%.cpp=%.o)
 
