kinect recorder done ;-)

--- a/share/examples/Hardware/VideoWriter/Makefile
+++ b/share/examples/Hardware/VideoWriter/Makefile
@@ -5,6 +5,7 @@ CXXFLAGS += -D__STDC_CONSTANT_MACROS
 LPATHS += /usr/local/lib
 LIBS += -lavformat -lavcodec -lavutil -lswscale -lx264 -lz
 
-DEPEND = Core System Hardware_kinect Hardware_VideoWriter Perception Gui
+OBJS = main.o
+DEPEND = Core Hardware_VideoWriter
 
 include $(BASE)/make-generic
