--- a/share/examples/Motion/constraint/Makefile
+++ b/share/examples/Motion/constraint/Makefile
@@ -1,5 +1,5 @@
 BASE = ../../..
 
-DEPEND = Motion Core Ors Gui Optim
+DEPEND = Motion Core Ors Gui Optim Perception
 
 include $(BASE)/make-generic
