--- a/share/Makefile
+++ b/share/Makefile
@@ -1,8 +1,6 @@
 BASE = .
 
-target: examples
-
-MAKEFLAGS :=
+target: src
 
 ################################################################################
 
@@ -10,6 +8,7 @@ NAME   = $(shell basename $(PWD))
 
 srcs =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern')
 srcs += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d)
+#srcs += $(shell find src/Hardware -mindepth 1 -maxdepth 1 -type d)
 exas = $(shell find examples -mindepth 2 -maxdepth 2 -type d)
 
 ################################################################################
