only add to libs, don't set it completely

--- a/share/src/extern/SWIFT_decomposer/Makefile
+++ b/share/src/extern/SWIFT_decomposer/Makefile
@@ -4,7 +4,7 @@ OUTPUT := $(BASE)/lib/libextern_$(NAME).a
 
 CXXFLAGS += -DSWIFT_DECOMP -DDECOMP_GRAPHICS -O3 -fPIC -w -IRAPID -I/usr/include/tcl8.5
 
-LIBS = -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu -lX11 -lGL
+LIBS += -lqhull -lm -ltcl -ltk -lglut -lGLU -lXmu -lX11 -lGL
 
 SRCS = $(shell find . -maxdepth 2 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
