--- a/usr/AB/ueye/rec_multithread_reprise_yuv/Makefile
+++ b/usr/AB/ueye/rec_multithread_reprise_yuv/Makefile
@@ -3,7 +3,7 @@ BASE=../../../../share
 DEPEND = Core Gui
 QT = 1
 
-#CXX = clang++
+CXX = clang++
 
 PREOBJS = ./recorder_moc.cpp ./ueyecamera_moc.cpp ./recworker_moc.cpp
 
@@ -11,7 +11,7 @@ OBJS  = $(shell find . -maxdepth 1 -name '*.cpp')
 OBJS := $(filter-out $(PREOBJS),$(OBJS))
 OBJS := $(OBJS:%.cpp=%.o)
 
-CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -D__STDC_CONSTANT_MACROS -march=native
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES -D__STDC_CONSTANT_MACROS #-march=native
 LPATHS += /usr/local/lib
 LIBS += -lueye_api -lavformat -lavcodec -lavutil -lswscale -lx264 -lz
 
