--- a/share/src/Ors/Makefile_orspy
+++ b/share/src/Ors/Makefile_orspy
@@ -3,10 +3,9 @@
 # Experimental as of <2013-04-02 Tue>
 #
 # in python you can use ors simply by importing ors:
-# >>> import sys
-# >>> sys.path.append('../../lib/')
-# >>> import ors
-# >>> graph = ors.Graph()
+# >>> import orspy
+# >>> graph = orspy.Graph()
+# >>> help(orspy)
 #
 # Also take a look at share/test/orspy/
 
