--- a/share/src/Core/Makefile_corepy
+++ b/share/src/Core/Makefile_corepy
@@ -19,8 +19,8 @@ main: python
 python:
 	swig2.0 -c++ -python core.i
 	install -D corepy.py ~/.local/lib/python2.7/site-packages/corepy.py
-	g++ -c -fPIC -shared core_wrap.cxx -I../ -I/usr/include/python2.7/ 
-	g++ -shared core_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lGui -o ~/.local/lib/python2.7/site-packages/_corepy.so
+	$(CXX) -c -fPIC -shared core_wrap.cxx -I../ -I/usr/include/python2.7/ 
+	$(CXX) -shared core_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lGui -o ~/.local/lib/python2.7/site-packages/_corepy.so
 	rm corepy.py
 
 clean:
