--- a/share/src/Ors/Makefile_orspy
+++ b/share/src/Ors/Makefile_orspy
@@ -19,8 +19,8 @@ main: python
 python:
 	swig2.0 -c++ -python ors.i
 	install -D orspy.py ~/.local/lib/python2.7/site-packages/orspy.py
-	g++ -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/ 
-	g++ -shared ors.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lOrs -o ~/.local/lib/python2.7/site-packages/_orspy.so
+	$(CXX) -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/ 
+	$(CXX) -shared ors.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lOrs -o ~/.local/lib/python2.7/site-packages/_orspy.so
 	rm orspy.py
 
 clean:
