--- a/share/src/Ors/Makefile_orspy
+++ b/share/src/Ors/Makefile_orspy
@@ -15,11 +15,13 @@ endif
 
 main: python
 
+LDFLAGS+=-L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib
+
 python:
 	swig2.0 -c++ -python ors.i
 	install -D orspy.py ~/.local/lib/python2.7/site-packages/orspy.py
 	$(CXX) -c -fPIC -shared ors_wrap.cxx -I../ -I/usr/include/python2.7/ 
-	$(CXX) -shared ors.o ors_wrap.o -I../ -I/usr/include/python2.7/ -L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib -lCore -lOrs -o ~/.local/lib/python2.7/site-packages/_orspy.so
+	$(CXX) -shared ors.o ors_wrap.o -I../ -I/usr/include/python2.7/  $(LDFLAGS) -lCore -lOrs -o ~/.local/lib/python2.7/site-packages/_orspy.so
 	rm orspy.py
 
 clean:
