yet another minimalistic libav video writer (using old conventions - compiles on current ubuntu)

--- a/share/src/Hardware/VideoWriter/Makefile
+++ b/share/src/Hardware/VideoWriter/Makefile
@@ -1,6 +1,6 @@
 BASE   = ../../..
 NAME   = libHardware_$(shell basename `pwd`)
-OUTPUT := $(BASE)/lib/$(NAME).a
+OUTPUT := $(BASE)/lib/$(NAME).so
 
 QT = 1
 CXXFLAGS += -D__STDC_CONSTANT_MACROS
