--- a/share/src/Perception/Makefile
+++ b/share/src/Perception/Makefile
@@ -7,6 +7,10 @@ OPENCV = 1
 #PCL = 1
 DEPEND = Core Gui
 
+CXXFLAGS += -D__STDC_CONSTANT_MACROS
+#LPATHS += /usr/local/lib
+LIBS += -lavformat -lavcodec -lavutil -lswscale -lx264 -lz
+
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
 
