--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,5 +1,6 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 2.8.1)
 project(MLR_SHARE)
+cmake_policy(SET CMP0015 NEW)
 
 # almost all programs use threads
 find_package (Threads)
