--- a/share/examples/Gui/CMakeLists.txt
+++ b/share/examples/Gui/CMakeLists.txt
@@ -4,4 +4,4 @@ add_subdirectory(meshTools)
 add_subdirectory(opengl)
 add_subdirectory(opengl_threaded)
 add_subdirectory(plot)
-#add_subdirectory(qhull)
+add_subdirectory(qhull)
