--- a/share/src/Optim/CMakeLists.txt
+++ b/share/src/Optim/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES     ${SOURCES}
         benchmarks.cpp
         constrained.cpp
         optimization.cpp
+        convert.cpp
                 )
 
 add_library(Optim SHARED ${SOURCES})
