--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -58,11 +58,15 @@ set(OPTIM_DIRS src/Optim)
 set(OPTIM_SAMPLES examples/Optim)
 set(INFER_DIRS src/Infer)
 set(INFER_SAMPLES examples/Infer)
+set(PERCEPTION_DIRS src/Perception)
+set(MOTION_DIRS src/Motion)
+set(MOTION_SAMPLES examples/Motion)
 
 set(CURRENT_SLICE ${CORE_DIRS} ${GUI_DIRS} ${ORS_DIRS} ${OPTIM_DIRS} 
-        ${INFER_DIRS}        
+        ${INFER_DIRS} ${MOTION_DIRS} ${PERCEPTION_DIRS}
         ${CORE_SAMPLES} ${GUI_SAMPLES} ${ORS_SAMPLES} ${OPTIM_SAMPLES} 
-        ${INFER_SAMPLES})
+        ${INFER_SAMPLES} ${MOTION_SAMPLES}
+)
 
 foreach(DIR ${CURRENT_SLICE})
 add_subdirectory(${DIR})
