add LINK_PRIVATE and LINK_PUBLIC. add pkg-config for Gui

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -25,6 +25,44 @@ if(MT_OPENMP)
 endif(MT_OPENMP)
 # TODO option(MT_CUDA "Use CUDA" OFF)
 
+# Gui options
+option(USE_FLTK "Use FLTK" OFF)
+if(USE_FLTK)
+        set(MT_FLTK -DMT_FLTK)
+endif(USE_FLTK)
+option(USE_GTKGL "Use GTK GL" ON)
+if(USE_GTKGL)
+        set(MT_GTKGL -DMT_GTKGL)
+        set(USE_GL ON)
+endif(USE_GTKGL)
+option(USE_FREEGLUT "Use FreeGLUT" OFF)
+if(USE_FREEGLUT)
+        set(MT_FREEGLUT -DMT_FREEGLUT)
+        set(USE_OPENGL ON)
+endif(USE_FREEGLUT)
+option(USE_OPENGL "Use OpenGL" ON)
+if(USE_OPENGL)
+        set(MT_GL -DMT_GL)
+endif(USE_OPENGL)
+option(USE_QHULL "Use QHULL" ON)
+if(USE_QHULL)
+        set(MT_QHULL -DMT_QHULL)
+        set(QHULL_LIBRARIES qhull)
+        set(PKG_QHULL -lqhull)
+endif(USE_QHULL)
+option(USE_GRAPHVIZ "Use graphviz visualization" ON)
+if(USE_GRAPHVIZ)
+endif(USE_GRAPHVIZ)
+
+# TODO check for illegal combinations
+
+configure_file(
+        ${PROJECT_SOURCE_DIR}/pkgconfig/mlr_gui.pc.in
+        ${PROJECT_BINARY_DIR}/pkgconfig/mlr_gui.pc
+        @ONLY
+)
+# prepend search path
+set(ENV{PKG_CONFIG_PATH} ${PROJECT_BINARY_DIR}/pkgconfig:ENV{PKG_CONFIG_PATH})
 
 # allow users to switch off compilation of unit-tests
 option(TESTING_ENABLED "Should we run unit-tests (default yes)" ON)
