--- a/share/examples/Motion/grasp/CMakeLists.txt
+++ b/share/examples/Motion/grasp/CMakeLists.txt
@@ -2,8 +2,8 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 add_executable(${NAME} main.cpp)
 
-target_link_libraries(${NAME} Motion Optim)
-add_definitions(-DMT_Motion -DMT_Core -DMT_Ors -DMT_Gui -DMT_Optim)
+target_link_libraries(${NAME} Motion Optim Gui)
+add_definitions(-DMT_Motion -DMT_Core -DMT_Optim)
 
 add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
