--- a/share/examples/Gui/meshTools/CMakeLists.txt
+++ b/share/examples/Gui/meshTools/CMakeLists.txt
@@ -4,8 +4,7 @@ add_executable(${NAME} main.cpp)
 
 target_link_libraries(${NAME} Core Gui ${GL_LIBRARIES} qhull extern_SWIFT 
         extern_SWIFT_decomposer)
-add_definitions(-DMT_GL -DMT_Core -DMT_Gui -DMT_qhull -DMT_extern_SWIFT 
-        -DMT_extern_SWIFT_decomposer)
+add_definitions(-DMT_GL)
 
 add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
