add relational examples

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -101,11 +101,12 @@ set(MOTION_DIRS src/Motion)
 set(MOTION_SAMPLES examples/Motion)
 set(SYSTEM_SAMPLES examples/System)
 set(RELATIONAL_DIRS src/relational)
+set(RELATIONAL_SAMPLES examples/relational)
 
 set(CURRENT_SLICE ${CORE_DIRS} ${GUI_DIRS} ${ORS_DIRS} ${OPTIM_DIRS} 
         ${INFER_DIRS} ${MOTION_DIRS} ${PERCEPTION_DIRS} ${RELATIONAL_DIRS}
         ${CORE_SAMPLES} ${GUI_SAMPLES} ${ORS_SAMPLES} ${OPTIM_SAMPLES} 
-        ${INFER_SAMPLES} ${MOTION_SAMPLES} ${SYSTEM_SAMPLES}
+        ${INFER_SAMPLES} ${MOTION_SAMPLES} ${SYSTEM_SAMPLES} ${RELATIONAL_SAMPLES}
 )
 
 foreach(DIR ${CURRENT_SLICE})
