slice RoboticsCourse done

--- a/share/Makefile
+++ b/share/Makefile
@@ -22,6 +22,9 @@ depend: $(srcs:%=dependPath/%)
 
 clean: $(srcs:%=cleanPath/%) $(exas:%=cleanPath/%) cleanLocks
 
+inf:
+	@echo "srcs =" $(srcs)
+
 ################################################################################
 
 doc::
