--- a/share/src/Core/Makefile_corepy
+++ b/share/src/Core/Makefile_corepy
@@ -19,8 +19,8 @@ LDFLAGS+=-L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib
 python:
 	swig2.0 -c++ -python core.i
 	install -D corepy.py ~/.local/lib/python2.7/site-packages/corepy.py
-	$(CXX) $(EXTRA_CXXFLAGS) -c -fPIC -shared core_wrap.cxx -I../ -I/usr/include/python2.7/
-	$(CXX) -shared core_wrap.o -I../ -I/usr/include/python2.7/ $(LDFLAGS) -lCore -lGui -o ~/.local/lib/python2.7/site-packages/_corepy.so
+	$(CXX) $(EXTRA_CXXFLAGS) -c -std=c++0x -fPIC -shared core_wrap.cxx -I../ -I/usr/include/python2.7/
+	$(CXX) -std=c++0x -shared core_wrap.o -I../ -I/usr/include/python2.7/ $(LDFLAGS) -lCore -lGui -o ~/.local/lib/python2.7/site-packages/_corepy.so
 	rm corepy.py
 
 clean:
