pfc update with multiple scenes

--- a/share/examples/Motion/pfc/Makefile
+++ b/share/examples/Motion/pfc/Makefile
@@ -1,7 +1,7 @@
 BASE = ../../..
 
 GL = 1
-OBJS = main.o mobject.o
+OBJS = main.o mobject.o pfc.o ../splines/spline.o
 DEPEND = Motion Core Ors Gui Optim
 LIBS += -lGL
 
