--- a/share/src/Core/Makefile_corepy
+++ b/share/src/Core/Makefile_corepy
@@ -8,20 +8,9 @@
 #
 # Also take a look at share/test/orspy/
 
-ifndef MLR_PATH
-	MLR_PATH=~/git/mlr
-endif
+MODULE_NAME=core
+LIBS=-lCore -lGui
 
-main: python
+include ../../Makefile.swig
 
-LDFLAGS+=-L../../lib -Xlinker -rpath $(MLR_PATH)/share/lib
 
-python:
-	swig2.0 -c++ -python core.i
-	install -D corepy.py ~/.local/lib/python2.7/site-packages/corepy.py
-	$(CXX) $(EXTRA_CXXFLAGS) -c -std=c++0x -fPIC -shared core_wrap.cxx -I../ -I/usr/include/python2.7/ -DSWIG_TYPE_TABLE=mlr
-	$(CXX) -std=c++0x -shared core_wrap.o -I../ -I/usr/include/python2.7/ $(LDFLAGS) -lCore -lGui -o ~/.local/lib/python2.7/site-packages/_corepy.so
-	rm corepy.py
-
-clean:
-	rm -f _corepy.so core_wrap.*
